# tauri-terminal

./: package-lock.json  package.json  pnpm-lock.yaml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
